--- a/FIRST_CLASS/src/main/webapp/AllProdStyle.css
+++ b/FIRST_CLASS/src/main/webapp/AllProdStyle.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 *{
     font-family: 'Noto Sans KR', sans-serif;
     list-style: none;
@@ -9,35 +8,30 @@
     padding: 0px;
     color :#000;
 }
-
 .intro_bg{
     background-color: rgba(189, 219, 239, 0.5);
     width : 100%;
     height: 180px;
 }
-
+.main{
+    width:400px;
+    height: 80px;
+    margin-left: 20px;
+    line-height: 50px;
+    font-size: 22pt;  
+}
 .header{
     display: flex;
     width : 100%;
     margin:auto;
     height: 80px;
 }
-
-.main{
-    width:300px;
-    height: 80px;
-    margin-left: 30px;
-    line-height: 80px;
-    font-size: 22pt;  
-}
-
 .search_area{
     width: 800px;
     height: 40px;
     border-radius: 8px;
     margin-top: 20px;
 }
-
 .search_area > form > input{
     border : 0.5;
     width: 600px;
@@ -45,14 +39,8 @@
     background-color: rgba(0,0,0,0);
     color:#000;
     padding-left: 10px;
-    margin-left: 150px;
+    margin-left: 40px;
     border-radius: 8px;
-}
-.search_area > form > span{
-    width: 150px;
-    color :#000;
-    font-weight: bold;
-    cursor: pointer;
 }
 .search_area > form{
     display: flex;
@@ -74,17 +62,110 @@
     line-height: 80px;
     width: 500px;
 }
-
 .nav > li{
     margin-left: 30px;
 }
+.nav2{
+    width: 400px;
+    display: flex;
+    justify-self: flex-end;
+    line-height: 40px;
+    margin-top: 80px;
+    margin-left: -270px;
+}
+.nav2 > li{
+    margin-left: 30px;
+}
 
+.intro_text{
+    width: 100%;
+    height: 450px;
+    background-color: rgba(189, 219, 239, 0.5);
+}
+.mavel_text{
+    width : 250px;
+    height: 100px;
+    margin-left: 600px;
+    padding-top: 200px;
+}
+.mavel_text > li > a{
+    border: 0.5px solid #000;
+}
+.mavel_image > li> .ironman{
+    margin: -230px auto auto 1000px;
+}
+.mavel_image > li> .thor{
+    margin: -500px auto auto 1180px;
+}
+.mavel_image > li> .deadpool{
+    margin: -200px auto auto 1050px;
+}
+.main_text0{
+    width: 100%;
+    height: 250px;
+    background-color: rgba(236, 230, 204, 0.5);
+}
+.icons{
+    width: 1000px;
+    height: 200px;
+    margin:auto;
+}
+.all_prod{
+    display: flex;
+}
+.all_prod > .box{
+    flex: 1;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-top:50px;
+    border: none;
+    background-color: rgba(0, 0, 0,0.1);
+}
+.all_prod > div > li{
+    margin-top: 25px;
+    margin-left: 22px;
+}
+.box > div {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: gray;
+}
+.nemo1{
+    margin: 25px 20px auto 35px;
+}
+.nemo2{
+    margin: -50px 10px auto 86px;
+}
+.nemo3{
+    margin: 1px auto auto 34px;
+}
+.nemo4{
+    margin: -50px 10px auto 86px;
+}
+
+.logo{
+    width: 120px;
+    height: 90px;
+}
+.prod_text{
+    display: flex;
+    font-size: 16pt;
+    width: 1000px;
+    height: 50px;
+    margin:auto;
+}
+.prod_text > a {
+    flex:1;
+    text-align: center;
+    margin-top: 10px;
+}
 .header_menu{
-    width: 70%;
+    width: 800px;
     height: 60px;
     margin-top: 40px;
-    margin-left: 425px;
-
+    margin-left: 350px;
 }
 .header_contents {
     display: flex;
@@ -94,70 +175,8 @@
 }
 .header_contents > li {
     flex : 1;
-    margin-right: 50px;
+    margin-left: 10px;
 }
-
-.main_bg{
-    display: flex;
-    width: 100%;
-    height: 800px;
-    background-color: rgba(0, 0, 0, 0.05);
-}
-.side_menu{
-    width: 280px;
-    height: 800px;
-    margin-left: 60px;
-    background-color: aqua;
-}
-.side_mypage{
-    width: 280px;
-    height: 50px;
-    margin-top: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: red;
-}
-.side_mypage > span {
-    margin-left: 20px;
-    font-size: 14pt;
-    line-height: 50px;
-}
-.side_contents{
-    flex: none;
-    width: 280px;
-    height: 200px;
-    background-color: forestgreen;
-}
-.side_contents > li {
-    padding-top: 5px;
-    padding-left: 20px;
-}
-.main_menu{
-    width: 1200px;
-    height: 800px;
-    background-color: blue;
-}
-.main_name{
-    width: 100px;
-    height: 50px;
-    background-color: orange;
-    margin : 20px auto auto auto;
-}
-.main_name > li{
-    font-size: 18px;
-    line-height: 40px;
-    text-align: center;
-}
-.main_content{
-    margin-top: 10px;
-    width: 1200px;
-    height: 720px;
-    background-color: chartreuse;
-}
-.main_content > span {
-    margin-left: 200px;
-    margin-right: 150px;
-}
-
 /*------------------나--------------------------*/
 
 .grid-9 {
@@ -353,6 +372,9 @@
 	margin-top: 20px;
 	margin-left : 450px;
 }
+
+/* --------------------------------------------------- */
+
 
 
 
