--- a/FIRST_CLASS/src/main/webapp/style.css
+++ b/FIRST_CLASS/src/main/webapp/style.css
@@ -178,7 +178,7 @@
 }
 .sub_text0{
     width: 100%;
-    height: 700px;
+    height: auto;
     background-color: rgba(236, 230, 204, 0.5);
 }
 .sub_contents{
