판매내역 구매내역 스크롤 추가

--- a/FIRST_CLASS/src/main/webapp/style.css
+++ b/FIRST_CLASS/src/main/webapp/style.css
@@ -337,7 +337,7 @@
 }
 .selling_list{
     width: 100%;
-    height: 300px;
+    height: 600px;
     margin: auto;
 
 }
@@ -477,7 +477,7 @@ td{
 .selled_list{    
     width: 1200px;
     height: 300px;
-    margin-top: 50px;
+    margin-top: auto;
 }
 .mypoint{
     display: flex;
